FEAT: Shutdown - Added button for shutting down the board gracefully to the toolbar

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -23,6 +23,10 @@
 			</div>
 
       <div class="toolbar" id="toolbar" data-toolbar>
+        <div>
+          <span class="toolBar" data-func="shutdownBBB"></span>
+        </div>
+
         <div class="logo">
           <img src="images/logo.png">
         </div>
@@ -126,7 +130,7 @@
                   <button id="cleanProject" class="projectManager" data-func="cleanProject">Clean project</button>
                   <button id="deleteProject" class="projectManager" data-func="deleteProject">Delete project</button>
                 </div>
-                  
+
               </div>
 
 
@@ -140,7 +144,7 @@
                 <input type="file" id="uploadFileInput" class="hidden" data-upload-file-input multiple></input>
               </div>
 
-              
+
 
               <button class="accordion" data-accordion-for="git">Git manager</button>
               <div class="panel" data-accordion="git">
