FEAT: Shutdown - Increased width of shutdown button, moved to right after stop as that seems like a sensible progression.

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -23,9 +23,6 @@
 			</div>
 
       <div class="toolbar" id="toolbar" data-toolbar>
-        <div>
-          <span class="toolBar" data-func="shutdownBBB"></span>
-        </div>
 
         <div class="logo">
           <img src="images/logo.png">
@@ -34,6 +31,7 @@
         <div class="start-stop">
           <span class="control-button-runstop start run toolBar" data="Run project" id="run" data-toolbar-run data-func="run"></span>
           <span class="control-button-runstop start stop toolBar" data="Stop project" data-toolbar-stop id="stop" data-func="stop"></span>
+          <span class="control-button-shutdown shutdown toolBar" data-toolbar-shutdown id="shutdown" data-func="shutdownBBB"></span>
         </div>
         <div id="control-text-1" class="tool-text st-st" data-toolbar-controltext1></div>
 
