FEAT: Shutdown - By request moved the shutdown button to the right

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -24,20 +24,25 @@
 
       <div class="toolbar" id="toolbar" data-toolbar>
 
+
         <div class="logo">
           <img src="images/logo.png">
+        </div>
+
+        <div id="control-text-3" class="tool-text st-st" data-toolbar-controltext3></div>
+        <div class="shutdown-parent">
+          <span class="control-button-shutdown shutdown toolBar" data-toolbar-shutdown id="shutdown" data-func="shutdownBBB"></span>
         </div>
 
         <div class="start-stop">
           <span class="control-button-runstop start run toolBar" data="Run project" id="run" data-toolbar-run data-func="run"></span>
           <span class="control-button-runstop start stop toolBar" data="Stop project" data-toolbar-stop id="stop" data-func="stop"></span>
-          <span class="control-button-shutdown shutdown toolBar" data-toolbar-shutdown id="shutdown" data-func="shutdownBBB"></span>
         </div>
         <div id="control-text-1" class="tool-text st-st" data-toolbar-controltext1></div>
 
         <div class="toolbar-functions">
 					<span class="scope-button toolBar" data-toolbar-scope data="Launch scope"></span>
-					<span class="console-button toolBar" data="Clear console" data-func="clearConsole"></span>
+					<span class="console-button toolBar" data-toolbar-console data="Clear console" data-func="clearConsole"></span>
 				</div>
         <div id="control-text-2" class="tool-text st-st" data-toolbar-controltext2></div>
 				<!-- <div class="tool-text other"></div> -->
