Better structure for data and control websockets. Bela websocket class creatated. Basic non-p5-specific handlers separated from the p5 sketches. P5 sketches separated and switched to instance mode.

--- a/IDE/public/gui.html
+++ b/IDE/public/gui.html
@@ -11,7 +11,16 @@
             <script src="js/p5.min.js"></script>
             <script src="js/p5.dom.min.js"></script>
 
-	        <script src="js/sketch.js"></script>
+            <script src="js/bela-ws.js"></script>
+
+            <script src="js/gui/gui-slider.js"></script>
+
+            <script src="js/gui/bela-gui-data-handler.js"></script>
+	        <script src="js/gui/p5-gui-sketch.js"></script>
+
+            <script src="js/gui/bela-gui-control-handler.js"></script>
+            <script src="js/gui/p5-standard-gui-sketch.js"></script>
+
 
           </head>
           <body>
