--- a/IDE/public/gui.html
+++ b/IDE/public/gui.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-            <title>p5.js sliders for Bela</title>
+            <title>p5 gui</title>
 
             <style> body {padding: 0; margin: 0;} </style>
 
