--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -96,9 +96,8 @@
               <span class="dropdown" data-projects>
 							  <button class="dropbtn" data-dropdown-for="project">Your projects</button>
                 <div class="dropdown-content" data-dropdown="project">
-                  <select class="projectManager" id="projects" data-projects-select data-func="openProject">
-  									<option selected>Choose a project from your board</option>
-							    </select>
+                  <select class="projectManager" id="projects" data-projects-select data-func="openProject" multiple>
+  						    </select>
                 </div>
 							</span>
               <button id="new" class="create-project projectManager" data-func="newProject">New Project</button>
@@ -126,7 +125,7 @@
                   <button id="cleanProject" class="projectManager" data-func="cleanProject">Clean project</button>
                   <button id="deleteProject" class="projectManager" data-func="deleteProject">Delete project</button>
                 </div>
-                  
+
               </div>
 
 
@@ -140,7 +139,7 @@
                 <input type="file" id="uploadFileInput" class="hidden" data-upload-file-input multiple></input>
               </div>
 
-              
+
 
               <button class="accordion" data-accordion-for="git">Git manager</button>
               <div class="panel" data-accordion="git">
