--- a/IDE/public/gui.html
+++ b/IDE/public/gui.html
@@ -4,25 +4,16 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-            <title>p5 gui</title>
+            <title>Bela GUI</title>
 
             <style> body {padding: 0; margin: 0;} </style>
 
-            <script src="js/p5.min.js"></script>
-            <script src="js/p5.dom.min.js"></script>
-
+            <script src="js/jquery.js"></script>
             <script src="js/bela-ws.js"></script>
 
-            <script src="js/gui/gui-slider.js"></script>
-
-            <script src="js/gui/bela-gui-data-handler.js"></script>
-	        <script src="js/gui/p5-gui-sketch.js"></script>
-
-            <script src="js/gui/bela-gui-control-handler.js"></script>
-            <script src="js/gui/p5-standard-gui-sketch.js"></script>
-
-
+            <script src="/gui/js/utils.js"></script>
+            <script src="/gui/js/gui-loader.js"></script>
           </head>
-          <body>
-          </body>
+
+          <body></body>
 </html>
