--- a/IDE/public/gui/nexus-gui.html
+++ b/IDE/public/gui/nexus-gui.html
@@ -7,21 +7,14 @@
 
     <title>nexus gui</title>
 
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-        }
-    </style>
-
     <script src="js/NexusUI.min.js"></script>
 
     <script src="js/bela-ws.js"></script>
 
-    <script src="js/gui/gui-slider.js"></script>
+    <script src="/gui/js/gui-slider.js"></script>
 
-    <script src="js/gui/bela-gui-data-handler.js"></script>
-    <script src="js/gui/bela-gui-control-handler.js"></script>
+    <script src="/gui/js/bela-gui-data-handler.js"></script>
+    <script src="/gui/js/bela-gui-control-handler.js"></script>
 
 </head>
 
@@ -52,6 +45,10 @@
             <div nexus-ui="slider" id="Gain"></div>
             <div nexus-ui="number" id="Gain-disp"></div>
         </div>
+        <div>
+            <label class='controlLabel' for="Select0">Select 0</label>
+            <div nexus-ui="select" id="Select0"></div>
+        </div>
     </div>
 </body>
 
@@ -59,7 +56,7 @@
 <script type="text/javascript">
     var rack = new Nexus.Rack("#nexus-rack")
 
-    let findNexusElementByType = function(rack, type) {
+    var findNexusElementByType = function(rack, type) {
         let sliders = [];
         for(e in rack) {
             if(rack[e].hasOwnProperty('type') &&rack[e].type === type)
@@ -99,16 +96,13 @@
         return this.element.value = val;
     }
 
-    Bela_control.ws.addEventListener("message", () => {
-        console.log(Bela_control.sliders.length);
-        for(s in Bela_control.sliders) {
-            let Bela_slider = Bela_control.sliders[s];
-            if(Bela_slider.element == null) {
-                let matchS = rack._sliders.find((e) => (e.id === Bela_slider.name));
-                let matchNum = rack._numbers.find((e) => (e.id === Bela_slider.name+"-disp"));
-                Bela_slider.assign(matchS, matchNum);
-                Bela_slider.bind();
-            }
+    Bela_control.target.addEventListener('new-slider', function(event) {
+        let Bela_slider = Bela_control.sliders[event.detail.id];
+        if(Bela_slider.element == null) {
+            let matchS = rack._sliders.find((e) => (e.id === Bela_slider.name));
+            let matchNum = rack._numbers.find((e) => (e.id === Bela_slider.name+"-disp"));
+            Bela_slider.assign(matchS, matchNum);
+            Bela_slider.bind();
         }
-    }, false);
+    });
 </script>
