Changes to shutdown button positioning, got rid of text box

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -24,15 +24,15 @@
 
       <div class="toolbar" id="toolbar" data-toolbar>
 
+        <div class="shutdown-parent">
+          <span class="control-button-shutdown shutdown toolBar" data-toolbar-shutdown id="shutdown" data-func="shutdownBBB"></span>
+        </div>
 
         <div class="logo">
           <img src="images/logo.png">
         </div>
 
-        <div id="control-text-3" class="tool-text st-st" data-toolbar-controltext3></div>
-        <div class="shutdown-parent">
-          <span class="control-button-shutdown shutdown toolBar" data-toolbar-shutdown id="shutdown" data-func="shutdownBBB"></span>
-        </div>
+        <!-- <div id="control-text-3" class="tool-text st-st" data-toolbar-controltext3></div> -->
 
         <div class="start-stop">
           <span class="control-button-runstop start run toolBar" data="Run project" id="run" data-toolbar-run data-func="run"></span>
