FEAT: Scope - Some minor cleaning up of not only the scope css but connected mini dropdown classes. It's real mess and needs refactoring.

--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -11,7 +11,7 @@
       <button id="controlsButton">Launch controls</button>
       <div class="top">
         <div class="label">
-          <p>Plot mode: </p>
+          <p>Plot mode:</p>
         </div>
         <div class="value">
           <span class="mode-selector">
@@ -36,7 +36,7 @@
 
     <div id="control-panel" class="hidden scope-controls-parent channelView-parent">
       <div class="control-panel-column">
-        <div class="control-section axis-controls">
+        <div class="control-section axis-controls" id="TimeDomain">
 
           <h3>X-Axis</h3>
           <div class="block-section">
@@ -166,7 +166,7 @@
           </div>
         </div> <!-- end misc -->
 
-        <div class="control-section FFTControls">
+        <div class="control-section" id="FFTControls">
           <h3>FFT</h3>
           <div class="block-section">
             <div class="scope-label">
