GUI icon added, data binding corrected. Added to view.

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -42,6 +42,7 @@
 
         <div class="toolbar-functions">
 					<span class="scope-button toolBar" data-toolbar-scope data="Launch scope"></span>
+          <span class="gui-button toolBar" data-toolbar-gui data="Launch GUI"></span>
 					<span class="console-button toolBar" data-toolbar-console data="Clear console" data-func="clearConsole"></span>
 				</div>
         <div id="control-text-2" class="tool-text st-st" data-toolbar-controltext2></div>
