--- a/IDE/public/gui/nexus-racks/nexus-select.html
+++ b/IDE/public/gui/nexus-racks/nexus-select.html
@@ -1,13 +1,15 @@
 <div id="nexus-rack">
-        <label class='controlLabel' for="Select0">Select 0</label>
-        <div nexus-ui="select" id="Select0"></div>
-        <label class='controlLabel' for="Select1">Select 1</label>
-        <div nexus-ui="select" id="Select1"></div>
-        <label class='controlLabel' for="Select2">Select 2</label>
-        <div nexus-ui="select" id="Select2"></div>
-        <label class='controlLabel' for="Select3">Select 3</label>
-        <div nexus-ui="select" id="Select3"></div>
-        <label class='controlLabel' for="Select4">Select 4</label>
-        <div nexus-ui="select" id="Select4"></div>
+        <label class='controlLabel' for="String0">String 0</label>
+        <div nexus-ui="select" id="String0"></div>
+        <label class='controlLabel' for="String1">String 1</label>
+        <div nexus-ui="select" id="String1"></div>
+        <label class='controlLabel' for="String2">String 2</label>
+        <div nexus-ui="select" id="String2"></div>
+        <label class='controlLabel' for="String3">String 3</label>
+        <div nexus-ui="select" id="String3"></div>
+        <label class='controlLabel' for="String4">String 4</label>
+        <div nexus-ui="select" id="String4"></div>
+        <label class='controlLabel' for="String5">String 5</label>
+        <div nexus-ui="select" id="String5"></div>
     </div>
 </div>
