--- a/IDE/public/gui/p5-gui.html
+++ b/IDE/public/gui/p5-gui.html
@@ -2,6 +2,8 @@
 <script src="js/p5.dom.min.js"></script>
 
 <script src="/gui/js/gui-slider.js"></script>
+<script src="/gui/js/gui-select.js"></script>
+
 
 <script src="/gui/js/bela-gui-data-handler.js"></script>
 <script src="/gui/js/bela-gui-control-handler.js"></script>
