FEAT: Reduce Title Space - Removed unnecessary words from IDE index titles

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -17,8 +17,8 @@
     <div class="upper" data-upper>
 
       <div class="file-status">
-				<span class="project">Current project: <span class="current" data-current-project>None</span></span>
-				<span class="file">Current file: <span class="current" data-current-file>None</span></span>
+				<span class="project">Project: <span class="current" data-current-project>None</span></span>
+				<span class="file">File: <span class="current" data-current-file>None</span></span>
         <span><span class="status" data-current-status-title></span> <span class="current" data-current-status></span></span>
 			</div>
 
