FEAT: Download Project - Added project download functionality which apprently was missing from the IDE but I can't find hide nor hair of it in the old public index. Tracked down the route and the init in the views though so it wasn't impossible to add.

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -133,6 +133,7 @@
                   <button id="saveas" class="projectManager" data-func="saveAs">Save project as&hellip;</button>
                 </div>
                 <div class="button-container">
+                  <a data-project-download href="/download" download><button id="downloadProject" class="button fileManager">Download Project</button></a>
                   <button id="cleanProject" class="projectManager" data-func="cleanProject">Clean project</button>
                   <button id="deleteProject" class="projectManager" data-func="deleteProject">Delete project</button>
                 </div>
