Added sticky styling to fix titles with scrolling
(cherry picked from commit 582a593a65f86c5c1bf09ba84d65e4b07279c140)

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -101,9 +101,10 @@
         <div id="tab-content-area">
           <section id="tab-content" data-tab-content>
             <div class="tab-info" data-tab="explorer">
-              <span class="title-container">
+              <div class="title-container">
                 <h1>Project Explorer<hr /></h1>
-              </span>
+              </div>
+
               <span class="dropdown" data-projects>
 							  <button class="dropbtn" data-dropdown-for="project">Your projects</button>
                 <div class="dropdown-content" data-dropdown="project">
@@ -202,16 +203,16 @@
               </div>
             </div>
             <div class="tab-info" data-tab="examples">
-              <span class="title-container">
+              <div class="title-container">
                 <h1>Examples<hr /></h1>
-              </span>
+              </div>
               <ul class="projectManager" data-examples data-func="openExample"></ul>
             </div>
+            
             <div class="tab-info" data-tab="settings">
-							<!-- TAB 1: PROJECT SETTINGS -->
-              <span class="title-container">
+              <div class="title-container">
                 <h1>Settings<hr /></h1>
-              </span>
+              </div>
 
               <button class="accordion" data-accordion-for="project-settings">Project Settings</button>
 
@@ -556,9 +557,9 @@
               </div>
             </div>
             <div class="tab-info" data-tab="refs">
-              <span class="title-container">
+              <div class="title-container">
                 <h1>Documentation<hr /></h1>
-              </span>
+              </div>
 							<a href="documentation" target="_blank">
                 <button class="doc-button">Launch full documentation</button>
               </a>
@@ -639,9 +640,9 @@
             </div>
 
             <div class="tab-info" data-tab="libraries">
-              <span class="title-container">
+              <div class="title-container">
                 <h1>Libraries<hr /></h1>
-              </span>
+              </div>
               <ul class="libraries-list-parent" data-libraries-list data-func="resources"></ul>
             </div>
           </section>
