--- a/IDE/public/gui/index.html
+++ b/IDE/public/gui/index.html
@@ -8,8 +8,8 @@
 
             <style> body {padding: 0; margin: 0;} </style>
 
-            <script src="js/jquery.js"></script>
-            <script src="js/bela-ws.js"></script>
+            <script src="../js/jquery.js"></script>
+            <script src="../js/bela-ws.js"></script>
 
             <script src="/gui/js/utils.js"></script>
             <script src="/gui/js/gui-loader.js"></script>
