--- a/IDE/public/gui/p5-gui.html
+++ b/IDE/public/gui/p5-gui.html
@@ -1,5 +1,5 @@
-<script src="js/p5.min.js"></script>
-<script src="js/p5.dom.min.js"></script>
+<script src="../js/p5.min.js"></script>
+<script src="../js/p5.dom.min.js"></script>
 
 <script src="/gui/js/gui-slider.js"></script>
 <script src="/gui/js/gui-select.js"></script>
