FEAT: Libraries Read Only Popup - Contents of library files will now show contents on click. This functionality will need to backported to Astrid's new design no doubt.

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -207,7 +207,7 @@
               </div>
               <ul class="projectManager" data-examples data-func="openExample"></ul>
             </div>
-            
+
             <div class="tab-info" data-tab="settings">
               <div class="title-container">
                 <h1>Settings<hr /></h1>
@@ -670,6 +670,7 @@
 				<h1></h1>
         <h3></h3>
 				<p></p>
+        <code></code>
 				<form></form>
 			</div>
 		</div>
