FEAT: Update Tooltipster - Along with updating the tooltipster library I also debugged a few things and also cleaned up the markup for consistency and legibility and then moved everything into the same folder as much as was sensible to keep the IDE public folder clean

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -207,7 +207,7 @@
               </div>
               <ul class="projectManager" data-examples data-func="openExample"></ul>
             </div>
-            
+
             <div class="tab-info" data-tab="settings">
               <div class="title-container">
                 <h1>Settings<hr /></h1>
@@ -550,7 +550,8 @@
                 <h1>Pin Diagram<hr /></h1>
               </div>
               <div id="pin_container">
-                <object data="diagram.html" id="pin_diagram_object" data-pin-diagram>
+                <p class="diagram-text">Hover over the coloured sections for more information.</p>
+                <object data="belaDiagram/diagram.html" id="pin_diagram_object" data-pin-diagram>
                   Your browser doesn’t support the object tag.
                 </object>
               </div>
