--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -5,8 +5,8 @@
 		<title data-title>Bela IDE</title>
     <!-- <link rel="stylesheet" type="text/css" href="stylesheet.css?v=1" /> -->
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-		<link rel="stylesheet" type="text/css" href="goldenlayout-base.css" />
-		<link rel="stylesheet" type="text/css" href="goldenlayout-light-theme.css" />
+		<link rel="stylesheet" type="text/css" href="/css/goldenlayout-base.css" />
+		<link rel="stylesheet" type="text/css" href="/css/goldenlayout-light-theme.css" />
     <script src="js/jquery.js"></script>
     <script src="js/dropdown.js" data-script-load></script>
 	</head>
