FEAT: Scope Controls - Implemented escape button and overlay close of controls. This whole thing really needs a going over, the logic is all over the place.

--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -32,8 +32,6 @@
       <span id="scopeStatus" class="scope-status-waiting">waiting</span>
     </div>
 
-    <div class="inactive-overlay"></div>
-
     <div id="control-panel" class="hidden scope-controls-parent channelView-parent">
       <div class="control-panel-column">
         <div class="control-section axis-controls" id="TimeDomain">
@@ -284,6 +282,8 @@
         </div><!-- end channel view 0 -->
       </div> <!-- end control RIHT panel column -->
     </div> <!-- end contol panel -->
+
+    <div class="overlay"></div>
 
     <div class="scopeWrapper">
       <canvas id="scopeBG"></canvas>
